<resources>
    <string name="app_name">MealPlanner</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="edit">EDIT</string>
    <string name="action_settings">Settings</string>
    <string name="edit_meal_title">EDIT MEAL</string>
    <string name="edit_meal_name">Meal: </string>
    <string name="edit_meal_url">Recipe Link: </string>
    <string name="edit_meal_notes">Meal Notes: </string>
    <string name="button_submit">SUBMIT</string>
    <string name="notification_message">Don\'t Forget Today\'s Meals!</string>
</resources>
