<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_meal_title"
        android:textSize="@dimen/day_name_txt_size"
        android:textColor="@color/colorPrimaryDark"
        android:layout_centerHorizontal="true"
        android:id="@+id/edit_meal_title"
        android:padding="@dimen/standard_pad"/>

    <ImageButton
        android:layout_width="@dimen/fav_button_size"
        android:layout_height="@dimen/fav_button_size"
        android:layout_alignParentRight="true"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:id="@+id/fav_button"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/standard_pad"
        android:layout_below="@+id/edit_meal_title"
        android:id="@+id/edit_meal_name_layout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_meal_name"
            android:id="@+id/edit_meal_name_prompt"/>
        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_meal_name_text"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/standard_pad"
        android:layout_below="@+id/edit_meal_name_layout"
        android:id="@+id/edit_meal_url_layout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_meal_url"
            android:id="@+id/edit_meal_url_prompt"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_meal_url_text"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/standard_pad"
        android:layout_below="@+id/edit_meal_url_layout"
        android:id="@+id/edit_meal_notes_layout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_meal_notes"
            android:id="@+id/edit_meal_notes_prompt"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_meal_notes_text"/>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_meal_notes_layout"
        android:text="@string/button_submit"
        android:padding="@dimen/standard_pad"
        android:layout_centerHorizontal="true"
        android:id="@+id/edit_meal_submit"/>

</RelativeLayout>